--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,23 @@
   border-radius: 15px;
   height:100px;
   
+}
 
+#branding #site-title a {
+	display: block;
+	margin: 0 0 0 30px;
+	padding: 0;
+	width: 226px;
+	height: 80px;
+	text-indent: -99999px;
+	background: transparent url('http://localhost/EasyReceipt/images/EasyReceiptTitle.png') left center no-repeat;
+}
+
+#howitworks {
+    background: url('http://localhost/EasyReceipt/images/HowItWorks.png') repeat-x scroll 0 100% transparent;
+    height: 420px;
+    margin: 0 auto 10px;
+    width: 960px;
 }
 
 
